--- a/views/partials/_nav.haml
+++ b/views/partials/_nav.haml
@@ -21,5 +21,5 @@
                 %a.prefs{:href => "/#{@user[:name]}/prefs"} Preferences
         %li.login
             %center
-                %a{:href => "/logout"}
+                %a.logout{:href => "/logout"}
                     Log Out
