--- a/views/partials/_nav.haml
+++ b/views/partials/_nav.haml
@@ -3,7 +3,7 @@
         %li
             %center
                 .all_my My:
-                %a.home{:href => "/#{@user[:name]}/home"}
+                %a.home{:href => "/#{@user[:name]}/net"}
                     .my My
                     Net
         %li
