--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -413,12 +413,7 @@ a:hover {
     li .my {
       display: inline; }
     li .all_my {
-      font-size: 11pt;
-      display: inline-block;
-      position: absolute;
-      left: -1.8em;
-      top: 0.2em;
-      color: #ddd; }
+      display: none; }
     li a.icon {
       display: inline-block;
       position: relative;
